fix: add generation history

--- a/webview_panels/src/uiCore/theme.scss
+++ b/webview_panels/src/uiCore/theme.scss
@@ -10,6 +10,7 @@
   }
   & .card-body {
     padding: 0;
+    color: var(--Text-Neutral, #c4cad2);
     & .card-text {
       font-size: 12px;
       font-style: normal;
