fix: bulk generate

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -76,6 +76,7 @@
         text-decoration: none;
         color: #1e1e1e;
         width: 100%;
+        text-align: left;
         &:hover,
         &.active {
         color: var(--primary-accent);
