--- a/new_lineage_panel/src/Modal/PageModal.css
+++ b/new_lineage_panel/src/Modal/PageModal.css
@@ -22,14 +22,19 @@
   width: 84%;
   height: 94%;
   display: block;
-  background-color: #ffffff;
-  border-radius: 1em;
+  background-color: var(--modal-bg);
+  color: var(--text-color);
+  border-radius: 0.5em 0rem 0.5em 0.5rem;
 }
 
 .close-btn {
   position: absolute;
   top: 0px;
-  right: 4px;
-  color: black;
+  right: -2rem;
+  color: #ffffff;
   cursor: pointer;
+  background-color: var(--primary-accent);
+  display: flex;
+  padding: 0.5rem;
+  border-radius: 0 0.25rem 0.25rem 0;
 }
