--- a/webview_panels/src/modules/dataPilot/datapilot.module.scss
+++ b/webview_panels/src/modules/dataPilot/datapilot.module.scss
@@ -4,4 +4,23 @@
     margin-bottom: 1rem;
     list-style: none;
   }
+
+  .action-buttons{
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 24px;
+
+    & >div{
+      display: flex;
+    }
+    & :global .btn.active{
+      border-color: var(--primary-accent);
+    }
+    & > form {
+      margin-top: 24px;
+      padding-top: 24px;
+      border-top: 1px solid #424750;
+      flex: 100%;
+    }
+  }
 }
