fix: model gen from datapilot, review comments

--- a/webview_panels/src/modules/dataPilot/datapilot.module.scss
+++ b/webview_panels/src/modules/dataPilot/datapilot.module.scss
@@ -5,6 +5,12 @@
     list-style: none;
   }
 
+  :global .card-title{ 
+    font-size: 14px;
+    svg{
+    width: 24px;
+  }
+}
   .action-buttons{
     flex-wrap: wrap;
     justify-content: space-between;
