--- a/webview_panels/src/uiCore/components/tag/tag.module.scss
+++ b/webview_panels/src/uiCore/components/tag/tag.module.scss
@@ -1,9 +1,10 @@
 .tag {
   display: inline-block;
-  background: var(--text-grey-color);
+  background: var(--Backgrounds-04);
   padding: 3px 10px;
-  border-radius: 30px;
+  border-radius: 2px;
   color: var(--Text-white, #fff);
   font-size: 10px;
   font-weight: 300;
+  height: 20px;;
 }
