--- a/webview_panels/src/modules/dataPilot/datapilot.module.scss
+++ b/webview_panels/src/modules/dataPilot/datapilot.module.scss
@@ -5,10 +5,15 @@
     list-style: none;
   }
 
+  :global .card{
+    padding: 20px;
+  }
   :global .card-title{ 
     font-size: 14px;
     svg{
     width: 24px;
+    height: 24px;
+    margin-right: 6px;
   }
 }
   .action-buttons{
@@ -39,10 +44,16 @@
     border-radius: 8px;
     border: 1px solid var(--Backgrounds-04, #4A4D51);
     padding: 46px 20px 20px 20px;
-    text-align: center;
+    text-align: left;
     margin-top: 20px;
     h4 {
       margin-bottom: 24px;
     }
   }
+}
+
+.prompt-card{
+  border-radius: 8px;
+border: 1px solid var(--Stroke-Disable, #424750);
+background: var(--Backgrounds-Base, #1E1E1E);
 }
