--- a/docs_edit_panel/style.css
+++ b/docs_edit_panel/style.css
@@ -99,9 +99,18 @@
   background: #ffce73;
 }
 
+.new-ux-alert {
+  border-radius: 4px;
+  background: rgba(255, 206, 115, 0.1);
+  color: var(--Stroke-Orange, #e38e00);
+  padding: 10px;
+  line-height: 2;
+  font-size: 14px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: -2rem;
+}
 .btn-new-ux {
-  position: absolute;
-  top: 15px;
-  right: 0;
   background: #e38e00;
+  vertical-align: middle;
 }
