fix: validate credentials before showing datapilot and pass followup in model generation

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -24,6 +24,12 @@
         margin-top: 12px;
       }
       & .column-header {
+        .sync-btn{
+          svg{
+            width: 14px;
+            vertical-align: bottom;
+          }
+        }
         & div:last-of-type {
           margin-left: auto;
         }
