chore: use vscode font size and lexend font

--- a/webview_panels/src/main.css
+++ b/webview_panels/src/main.css
@@ -2,7 +2,7 @@
   --bs-body-font-family: "Lexend", var(--bs-font-sans-serif);
 }
 html {
-  font-size: 14px;
+  font-size: var(--vscode-font-size);
 }
 
 body {
