--- a/webview_panels/src/uiCore/theme.scss
+++ b/webview_panels/src/uiCore/theme.scss
@@ -1,6 +1,7 @@
 html {
-  --spacing-3xl: 1.714rem;
-  --spacing-2xl: 1.429rem;
+  --spacing-3xl: 1.846rem;
+  --spacing-2xl: 1.538rem;
+  --spacing-xl: 1.231rem;
   --spacing-lg: 0.857rem;
 }
 .card {
