--- a/webview_panels/src/main.css
+++ b/webview_panels/src/main.css
@@ -34,6 +34,7 @@ body {
   --Backgrounds-04: #4a4d51;
   --Backgrounds-02: #fff;
   --Select-menu-bg: #fff;
+  --Stroke-Disable: #c4cad2;
 }
 
 body.vscode-dark {
@@ -63,6 +64,7 @@ body.vscode-dark {
   --Backgrounds-04: #4a4d51;
   --Backgrounds-02: #28292c;
   --Select-menu-bg: rgba(66, 71, 80, 1);
+  --Stroke-Disable: #424750;
 }
 
 body {
