--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -17,6 +17,7 @@
     overflow: hidden;
     & .body {
       width: 80%;
+      min-width: var(--bs-breakpoint-md);
       overflow: overlay;
       padding-right: 1rem;
 
@@ -45,7 +46,7 @@
         position: sticky;
         z-index: 2;
         bottom: 0;
-        border-top: 1px solid var(--Stroke-Disable, #424750);
+        border-top: 1px solid var(--Stroke-Disable);
         background: var(--Backgrounds-02, #28292c);
         padding: 10px 20px;
 
@@ -59,6 +60,9 @@
           text-wrap: nowrap;
         }
 
+        button {
+          height: 100%;
+        }
         & p {
           border-radius: 2px;
           border: 1px solid var(--Stroke-Disable, #424750);
