--- a/webview_panels/src/uiCore/components/dropdownButton/styles.module.scss
+++ b/webview_panels/src/uiCore/components/dropdownButton/styles.module.scss
@@ -5,6 +5,6 @@
   }
   & button:last-child {
     border-radius: 0 2px 2px 0;
-    background: var(--Action-Brand-dark);
+    background: var(--action-brand-dark);
   }
 }
