--- a/webview_panels/src/uiCore/components/iconButton/styles.module.scss
+++ b/webview_panels/src/uiCore/components/iconButton/styles.module.scss
@@ -3,6 +3,6 @@
 
   &:global.outline {
     border-radius: 5px;
-    border: 1px solid var(--Stroke-Disable, #424750);
+    border: 1px solid var(--stroke--disable, #424750);
   }
 }
