--- a/webview_panels/src/main.css
+++ b/webview_panels/src/main.css
@@ -6,70 +6,78 @@ html {
 }
 
 body {
-  --bg-color: #f5f5f7;
-  --primary-accent: #247efe;
-  --column-node-bg: #e9f2ff;
-  --column-node-color: var(--primary-accent);
-  --text-color: #000000;
-  --card-bg: #ffffff;
-  --card-border-color: #e7e8ea;
-  --table-node-border-color: rgba(167, 178, 193, 0.3);
-  --table-node-expand-bg: #eaf3ff;
-  --table-node-collapse-bg: #ffffff;
-  --table-node-content-bg: #ffffff;
-  --text-grey-color: #8390a3;
-  --purpose-section-bg: #eaf3ff;
-  --column-section-bg: #f5f6f7;
-  --tag-bg: rgba(63, 140, 255, 0.1);
-  --tag-text-color: #082247;
-  --input-placeholder-color: rgba(8, 34, 71, 0.5);
-  --input-bg: #ffffff;
-  --input-text-color: #212529;
-  --input-border-color: #dee2e6;
-  --Text-Neutral: #4a4d51;
-  --Action-Red: #ee140f;
-  --dropdown-toggle-color: #1c1c1c;
-  --Action-Brand-dark: #004fbf;
-  --Stroke-Orange: #e38e00;
-  --Backgrounds-04: #4a4d51;
-  --Backgrounds-02: #fff;
-  --Select-menu-bg: #fff;
-  --Stroke-Disable: #c4cad2;
+  --primary-color: #247efe;
+  --text-color--title: #171717;
+  --text-color--paragraph: rgba(74, 77, 81, 1);
+  --text-color--caption: rgba(128, 128, 128, 1);
+  --text-color--white: rgba(255, 255, 255, 1);
+  --text-color--brand: rgba(36, 126, 254, 1);
+  --background--base: #ffffff;
+  --background--01: rgba(246, 245, 248, 1);
+  --background--02: rgba(245, 246, 247, 1);
+  --background--03: rgba(234, 243, 255, 1);
+  --background--04: rgba(211, 229, 255, 1);
+  --background: rgba(23, 23, 23, 1);
+  --background--blue: rgba(36, 126, 254, 1);
+  --action--active: rgba(36, 126, 254, 1);
+  --action--secondary: rgba(234, 243, 255, 1);
+  --action--disable: rgba(131, 144, 163, 1);
+  --action--brand: rgba(0, 79, 191, 1);
+  --action-red: #ee140f;
+  --action-brand-dark: #004fbf;
+  --icon--active: rgba(83, 84, 86, 1);
+  --icon--default: rgba(131, 144, 163, 1);
+  --icon--deactive: rgba(232, 232, 232, 1);
+  --icon--blue: rgba(36, 126, 254, 1);
+  --stroke--active: rgba(66, 71, 80, 1);
+  --stroke--default: rgba(131, 144, 163, 1);
+  --stroke--disable: rgba(196, 202, 210, 1);
+  --stroke--orange: rgba(227, 142, 0, 1);
+  --stroke--blue: rgba(36, 126, 254, 1);
+  --gray--gray-01: rgba(72, 78, 85, 1);
+  --gray--gray-02: rgba(58, 61, 65, 1);
+  --gray--blue--gray-01: rgba(8, 34, 71, 1);
+  --gray--blue--gray-02: rgba(55, 76, 106, 1);
 }
 
 body.vscode-dark {
-  --bg-color: #1e1e1e;
-  --primary-accent: #247efe;
-  --column-node-bg: rgba(131, 144, 163, 0.2);
-  --column-node-color: #ffffff;
-  --text-color: #ffffff;
-  --card-bg: #27292c;
-  --card-border-color: #d5dbe433;
-  --table-node-border-color: rgba(213, 219, 228, 0.1);
-  --table-node-expand-bg: #494e56;
-  --table-node-collapse-bg: #3a3d41;
-  --table-node-content-bg: #3a3d41;
-  --text-grey-color: #66768d;
-  --purpose-section-bg: #3c3c3c;
-  --column-section-bg: #3c3c3c;
-  --tag-bg: rgba(255, 255, 255, 0.1);
-  --tag-text-color: #ffffff;
-  --input-placeholder-color: #ffffff;
-  --input-bg: rgba(131, 144, 163, 0.2);
-  --input-text-color: #ffffff;
-  --input-border-color: rgba(131, 144, 163, 0.1);
-  --Text-Neutral: #c4cad2;
-  --Action-Red: #ee140f;
-  --dropdown-toggle-color: #1c1c1c;
-  --Backgrounds-04: #4a4d51;
-  --Backgrounds-02: #28292c;
-  --Select-menu-bg: rgba(66, 71, 80, 1);
-  --Stroke-Disable: #424750;
+  --primary-color: #247efe;
+  --text-color--title: #e8e8e8;
+  --text-color--paragraph: #c4cad2;
+  --text-color--caption: #808080;
+  --text-color--white: rgba(255, 255, 255, 1);
+  --text-color--brand: rgba(36, 126, 254, 1);
+  --background--base: rgba(30, 30, 30, 1);
+  --background--01: rgba(23, 23, 23, 1);
+  --background--02: rgba(40, 41, 44, 1);
+  --background--03: rgba(60, 60, 60, 1);
+  --background--04: rgba(74, 77, 81, 1);
+  --background: rgba(255, 255, 255, 1);
+  --background--blue: rgba(36, 126, 254, 1);
+  --action--active: rgba(36, 126, 254, 1);
+  --action--brand: rgba(0, 79, 191, 1);
+  --action--secondary: rgba(131, 144, 163, 1);
+  --action--disable: rgba(66, 71, 80, 1);
+  --action-red: #ee140f;
+  --action-brand-dark: #004fbf;
+  --stroke--active: rgba(232, 232, 232, 1);
+  --stroke--default: rgba(131, 144, 163, 1);
+  --stroke--disable: rgba(66, 71, 80, 1);
+  --stroke--orange: rgba(227, 142, 0, 1);
+  --stroke--blue: rgba(36, 126, 254, 1);
+  --icon--active: rgba(232, 232, 232, 1);
+  --icon--deactive: rgba(131, 144, 163, 1);
+  --icon--disable: rgba(66, 71, 80, 1);
+  --icon--blue: rgba(36, 126, 254, 1);
+  --gray--gray-01: rgba(72, 78, 85, 1);
+  --gray--gray-02: rgba(58, 61, 65, 1);
+  --gray--blue--gray-01: rgba(8, 34, 71, 1);
+  --gray--blue--gray-02: rgba(55, 76, 106, 1);
 }
 
 body {
-  color: var(--text-color);
-  background: var(--bg-color);
+  color: var(--text-color--title);
+  background: var(--background--base);
   padding: var(--spacing-3xl) var(--spacing-2xl) !important;
   line-height: 160%;
 }
