--- a/webview_panels/src/modules/documentationEditor/components/score/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/components/score/styles.module.scss
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--text-color);
+    color: var(--text-color--title);
   }
   & .score {
     height: 100%;
