--- a/webview_panels/src/uiCore/components/tag/tag.module.scss
+++ b/webview_panels/src/uiCore/components/tag/tag.module.scss
@@ -1,6 +1,6 @@
 .tag {
   display: inline-block;
-  background: var(--Backgrounds-04);
+  background: var(--background--04);
   padding: 3px 10px;
   border-radius: 2px;
   color: var(--Text-white, #fff);
