--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -14,13 +14,15 @@ html {
   --text-grey2-color: #c4cad2;
   --purpose-section-bg: #eaf3ff;
   --column-section-bg: #f5f6f7;
-  --tag-bg: rgba(63, 140, 255, 0.1);
+  --tag-bg: #f5f6f7;
   --tag-text-color: #082247;
   --input-placeholder-color: rgba(8, 34, 71, 0.5);
   --input-bg: #ffffff;
   --input-text-color: #212529;
   --input-border-color: #dee2e6;
   --modal-bg: #ffffff;
+  --popover-bg: #ffffff;
+  --divider-color: #e8e8e8;
 }
 
 html[data-theme="dark"] {
@@ -39,18 +41,21 @@ html[data-theme="dark"] {
   --text-grey2-color: #c4cad2;
   --purpose-section-bg: #3c3c3c;
   --column-section-bg: #3c3c3c;
-  --tag-bg: rgba(255, 255, 255, 0.1);
+  --tag-bg: #4a4d51;
   --tag-text-color: #ffffff;
   --input-placeholder-color: #ffffff;
   --input-bg: rgba(131, 144, 163, 0.2);
   --input-text-color: #ffffff;
   --input-border-color: rgba(131, 144, 163, 0.1);
   --modal-bg: #484e55;
+  --popover-bg: #28292c;
+  --divider-color: #424750;
 }
 
 body {
   padding: 0;
   color: var(--text-color);
+  font-size: var(--vscode-font-size) !important;
 }
 
 .position-relative {
@@ -198,4 +203,12 @@ body {
   gap: 8px;
   z-index: 100;
   align-items: center;
+}
+
+.normal-text {
+  color: var(--text-color);
+}
+
+.theme-bg {
+  background-color: var(--bg-color) !important;
 }
