chore: add datapilot, doc editor stories

--- a/webview_panels/src/main.css
+++ b/webview_panels/src/main.css
@@ -8,36 +8,36 @@ html {
 body {
   --primary-color: #247efe;
   --text-color--title: #171717;
-  --text-color--paragraph: rgba(74, 77, 81, 1);
-  --text-color--caption: rgba(128, 128, 128, 1);
-  --text-color--white: rgba(255, 255, 255, 1);
-  --text-color--brand: rgba(36, 126, 254, 1);
+  --text-color--paragraph: #4a4d51;
+  --text-color--caption: #808080;
+  --text-color--white: #ffffff;
+  --text-color--brand: #247efe;
   --background--base: #ffffff;
-  --background--01: rgba(246, 245, 248, 1);
-  --background--02: rgba(245, 246, 247, 1);
-  --background--03: rgba(234, 243, 255, 1);
-  --background--04: rgba(211, 229, 255, 1);
-  --background: rgba(23, 23, 23, 1);
-  --background--blue: rgba(36, 126, 254, 1);
-  --action--active: rgba(36, 126, 254, 1);
-  --action--secondary: rgba(234, 243, 255, 1);
-  --action--disable: rgba(131, 144, 163, 1);
-  --action--brand: rgba(0, 79, 191, 1);
+  --background--01: #f6f5f8;
+  --background--02: #f5f6f7;
+  --background--03: #eaf3ff;
+  --background--04: #d3e5ff;
+  --background: #171717;
+  --background--blue: #247efe;
+  --action--active: #247efe;
+  --action--secondary: #eaf3ff;
+  --action--disable: #8390a3;
+  --action--brand: #004fbf;
   --action-red: #ee140f;
   --action-brand-dark: #004fbf;
-  --icon--active: rgba(83, 84, 86, 1);
-  --icon--default: rgba(131, 144, 163, 1);
-  --icon--deactive: rgba(232, 232, 232, 1);
-  --icon--blue: rgba(36, 126, 254, 1);
-  --stroke--active: rgba(66, 71, 80, 1);
-  --stroke--default: rgba(131, 144, 163, 1);
-  --stroke--disable: rgba(196, 202, 210, 1);
-  --stroke--orange: rgba(227, 142, 0, 1);
-  --stroke--blue: rgba(36, 126, 254, 1);
-  --gray--gray-01: rgba(72, 78, 85, 1);
-  --gray--gray-02: rgba(58, 61, 65, 1);
-  --gray--blue--gray-01: rgba(8, 34, 71, 1);
-  --gray--blue--gray-02: rgba(55, 76, 106, 1);
+  --icon--active: #535456;
+  --icon--default: #8390a3;
+  --icon--deactive: #c4cad2;
+  --icon--blue: #247efe;
+  --stroke--active: #424750;
+  --stroke--default: #8390a3;
+  --stroke--disable: #c4cad2;
+  --stroke--orange: #e38e00;
+  --stroke--blue: #247efe;
+  --gray--gray-01: #484e55;
+  --gray--gray-02: #3a3d41;
+  --gray--blue--gray-01: #082247;
+  --gray--blue--gray-02: #374c6a;
 }
 
 body.vscode-dark {
@@ -45,34 +45,34 @@ body.vscode-dark {
   --text-color--title: #e8e8e8;
   --text-color--paragraph: #c4cad2;
   --text-color--caption: #808080;
-  --text-color--white: rgba(255, 255, 255, 1);
-  --text-color--brand: rgba(36, 126, 254, 1);
-  --background--base: rgba(30, 30, 30, 1);
-  --background--01: rgba(23, 23, 23, 1);
-  --background--02: rgba(40, 41, 44, 1);
-  --background--03: rgba(60, 60, 60, 1);
-  --background--04: rgba(74, 77, 81, 1);
-  --background: rgba(255, 255, 255, 1);
-  --background--blue: rgba(36, 126, 254, 1);
-  --action--active: rgba(36, 126, 254, 1);
-  --action--brand: rgba(0, 79, 191, 1);
-  --action--secondary: rgba(131, 144, 163, 1);
-  --action--disable: rgba(66, 71, 80, 1);
+  --text-color--white: #ffffff;
+  --text-color--brand: #247efe;
+  --background--base: #1e1e1e;
+  --background--01: #171717;
+  --background--02: #28292c;
+  --background--03: #3c3c3c;
+  --background--04: #4a4d51;
+  --background: #ffffff;
+  --background--blue: #247efe;
+  --action--active: #247efe;
+  --action--brand: #004fbf;
+  --action--secondary: #8390a3;
+  --action--disable: #424750;
   --action-red: #ee140f;
   --action-brand-dark: #004fbf;
-  --stroke--active: rgba(232, 232, 232, 1);
-  --stroke--default: rgba(131, 144, 163, 1);
-  --stroke--disable: rgba(66, 71, 80, 1);
-  --stroke--orange: rgba(227, 142, 0, 1);
-  --stroke--blue: rgba(36, 126, 254, 1);
-  --icon--active: rgba(232, 232, 232, 1);
-  --icon--deactive: rgba(131, 144, 163, 1);
-  --icon--disable: rgba(66, 71, 80, 1);
-  --icon--blue: rgba(36, 126, 254, 1);
-  --gray--gray-01: rgba(72, 78, 85, 1);
-  --gray--gray-02: rgba(58, 61, 65, 1);
-  --gray--blue--gray-01: rgba(8, 34, 71, 1);
-  --gray--blue--gray-02: rgba(55, 76, 106, 1);
+  --stroke--active: #e8e8e8;
+  --stroke--default: #8390a3;
+  --stroke--disable: #424750;
+  --stroke--orange: #e38e00;
+  --stroke--blue: #247efe;
+  --icon--active: #e8e8e8;
+  --icon--default: #8390a3;
+  --icon--deactive: #424750;
+  --icon--blue: #247efe;
+  --gray--gray-01: #484e55;
+  --gray--gray-02: #3a3d41;
+  --gray--blue--gray-01: #082247;
+  --gray--blue--gray-02: #374c6a;
 }
 
 body {
