fix: input placeholder color

--- a/webview_panels/src/uiCore/theme.scss
+++ b/webview_panels/src/uiCore/theme.scss
@@ -72,6 +72,10 @@ html {
     color: var(--text-color--title);
     box-shadow: none;
   }
+
+  &::placeholder{
+    color: var(--text-color--caption);
+  }
 }
 
 input.form-control {
