chore: code refactor
chore: code refactor

chore: code refactor

WIP

WIP

chore: code refactor

chore: code refactor

fix: remove reset table selection

WIP

WIP

WIP

WIP

WIP

WIP

WIP

chore: code refactor

chore: code refactor

WIP

chore: code refactor

chore: code refactor

WIP

WIP

WIP

WIP

fix: styling

WIP

chore: code refactor

chore: code refactor

chore: code refactor

fix: styling

fix: styling

chore: code refactor

chore: code refactor

chore: code refactor

feat: new approach

fix: new approach expand

fix: new approach node count

WIP

feat: added range

feat: resetting state on selection change

chore: code refactor

chore: code refactor

WIP

--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -14,13 +14,15 @@ html {
   --text-grey2-color: #c4cad2;
   --purpose-section-bg: #eaf3ff;
   --column-section-bg: #f5f6f7;
-  --tag-bg: rgba(63, 140, 255, 0.1);
+  --tag-bg: #f5f6f7;
   --tag-text-color: #082247;
   --input-placeholder-color: rgba(8, 34, 71, 0.5);
   --input-bg: #ffffff;
   --input-text-color: #212529;
   --input-border-color: #dee2e6;
   --modal-bg: #ffffff;
+  --popover-bg: #ffffff;
+  --divider-color: #e8e8e8;
 }
 
 html[data-theme="dark"] {
@@ -39,13 +41,15 @@ html[data-theme="dark"] {
   --text-grey2-color: #c4cad2;
   --purpose-section-bg: #3c3c3c;
   --column-section-bg: #3c3c3c;
-  --tag-bg: rgba(255, 255, 255, 0.1);
+  --tag-bg: #4a4d51;
   --tag-text-color: #ffffff;
   --input-placeholder-color: #ffffff;
   --input-bg: rgba(131, 144, 163, 0.2);
   --input-text-color: #ffffff;
   --input-border-color: rgba(131, 144, 163, 0.1);
   --modal-bg: #484e55;
+  --popover-bg: #28292c;
+  --divider-color: #424750;
 }
 
 body {
@@ -198,4 +202,8 @@ body {
   gap: 8px;
   z-index: 100;
   align-items: center;
+}
+
+.normal-text {
+  color: var(--text-color);
 }
