--- a/webview_panels/src/modules/dataPilot/datapilot.module.scss
+++ b/webview_panels/src/modules/dataPilot/datapilot.module.scss
@@ -65,3 +65,16 @@ body {
   border: 1px solid var(--stroke--disable);
   background: var(--background--02);
 }
+
+.ask-input {
+  form {
+    width: 100%;
+    position: relative;
+
+    button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  }
+}
