feat: set min range

--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -363,10 +363,16 @@ $size: 1.2em;
 
 .expand_nav_left {
   @extend .expand-nav;
+  &.disabled {
+    opacity: 0.5;
+  }
 }
 
 .expand_nav_right {
   @extend .expand-nav;
+  &.disabled {
+    opacity: 0.5;
+  }
 }
 
 .expand_nav_btn {
