--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -12,12 +12,12 @@ $node-width: 272px;
     border-top: 2px solid var(--table-node-border-color);
     border-left: 2px solid var(--table-node-border-color);
     border-right: 2px solid var(--table-node-border-color);
-    border-radius: 0.5em 0.5em 0 0;
-    padding: 0.5em;
+    border-radius: 0.25em 0.25em 0 0;
+    padding: 0.25em;
     &.collapse {
       background: var(--table-node-collapse-bg);
       border-bottom: 2px solid var(--table-node-border-color);
-      border-radius: 0.5em;
+      border-radius: 0.25em;
     }
     &.selected {
       border-color: #e38e00;
@@ -30,8 +30,8 @@ $node-width: 272px;
     border-bottom: 2px solid var(--table-node-border-color);
     border-left: 2px solid var(--table-node-border-color);
     border-right: 2px solid var(--table-node-border-color);
-    border-radius: 0 0 0.5em 0.5em;
-    padding: 0.5em;
+    border-radius: 0 0 0.25em 0.25em;
+    padding: 0.25em;
     &.selected {
       border-color: #e38e00;
     }
@@ -46,12 +46,12 @@ $node-width: 272px;
 
 .table_header {
   display: grid;
-  grid-template-columns: 3rem 1fr;
+  grid-template-columns: 3.2em 1fr;
   gap: 0em 0.5em;
   width: 100%;
-  height: 3em;
+  height: 3.2em;
   align-items: center;
-  border-radius: 0.5em;
+  border-radius: 0.25em;
   border: 1px solid var(--table-node-border-color);
 
   .seed {
@@ -91,7 +91,7 @@ $node-width: 272px;
     flex-direction: column;
     align-items: center;
     padding: 0.15em 0.5em;
-    border-radius: 0.5em;
+    border-radius: 0.25em;
 
     svg {
       $size: 2em;
@@ -131,8 +131,8 @@ $size: 1.2em;
 .table_card {
   width: 100%;
   overflow-x: hidden;
-  border-radius: 0.5em;
-  padding: 0.5em;
+  border-radius: 0.25em;
+  padding: 0.25em;
   border: 1px solid var(--card-border-color);
   cursor: pointer;
   background-color: var(--card-bg);
