--- a/webview_panels/src/uiCore/theme.scss
+++ b/webview_panels/src/uiCore/theme.scss
@@ -8,6 +8,7 @@ html {
   padding: 16px;
   border-radius: 8px;
   background: var(--background--02);
+  border-color: var(--stroke--disable);
 
   & .card-title {
     font-size: 12px;
