fix: minor UI issue

--- a/webview_panels/src/uiCore/components/codeblock/codeblock.module.scss
+++ b/webview_panels/src/uiCore/components/codeblock/codeblock.module.scss
@@ -11,7 +11,8 @@
             background: transparent !important;
 
             code {
-                padding: 0 !important;
+            background: transparent !important;
+            padding: 0 !important;
             }
         }
     }
