fix: ask followup input height

--- a/webview_panels/src/modules/dataPilot/datapilot.module.scss
+++ b/webview_panels/src/modules/dataPilot/datapilot.module.scss
@@ -59,6 +59,7 @@ body {
   
       textarea{
         padding: 1rem 1.5rem;
+        min-height: 48px;
       }
       button {
         position: absolute;
